2011-11-18  Roland Levillain  <roland@lrde.epita.fr>

	Refactor apps/morphers.

	* apps/morphers/recorder.cc,
	* apps/morphers/mask+recorder.cc:
	Factor common parts...
	* apps/morphers/recorder.hh: ...here (new file).
	* apps/morphers/Makefile.am
	(recorder_SOURCES, mask_recorder_SOURCES): Add recorder.hh.

2011-11-14  Roland Levillain  <roland@lrde.epita.fr>

	Add examples of morphers.

	* apps/morphers/mask+channel.cc,
	* apps/morphers/recorder.cc,
	* apps/morphers/mask+recorder.cc:
	New.
	* apps/morphers/Makefile.am: New.
	* apps/Makefile.am (SUBDIRS): Add morphers.

2011-10-04  Roland Levillain  <roland@lrde.epita.fr>

	Handle the case of filling an empty border.

	* mln/border/fill.hh (mln::border::impl::fill_size_1): Here.
	Aesthetic changes.
	* tests/border/fill_0.cc: New test.
	* tests/border/Makefile.am (check_PROGRAMS): Add fill_0.
	(fill_0_SOURCES): New.

2011-09-15  Roland Levillain  <roland@lrde.epita.fr>

	Update Milena tests w.r.t. the new version of lena.pgm.

	* tests/linear/log.cc: Update references values.

2011-05-12  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/io/dicom/load.hh: Fix invalid data while loading large
	image.

2010-12-10  Roland Levillain  <roland@lrde.epita.fr>

	Ensure non implemented reconstructions on sets abort at run time.

	* mln/morpho/reconstruction/by_dilation/union_find.hh,
	* mln/morpho/reconstruction/by_erosion/union_find.hh
	(union_find_dispatch(image::kind::logic, Image, Image, Neighborhood)):
	Here.
	* tests/morpho/reconstruction/by_dilation/union_find.cc,
	* tests/morpho/reconstruction/by_erosion/union_find.cc:
	Rename as...
	* tests/morpho/reconstruction/by_dilation/union_find_on_functions.cc,
	* tests/morpho/reconstruction/by_erosion/union_find_on_functions.cc:
	...these.
	* tests/morpho/reconstruction/by_dilation/union_find_on_sets.cc,
	* tests/morpho/reconstruction/by_erosion/union_find_on_sets.cc:
	New tests.
	* tests/morpho/reconstruction/by_dilation/Makefile.am,